# gdsc-hackathon

./: .gitignore  DEMO.md  README.md  extract.py  playbook.py  pr1.md  pr2.md  pr3.md  pr4.md  pr5.md  pr6.md  prompts.py  pyproject.toml  schema.py  test.py  triage.py
.claude/: settings.local.json
sample_logs/: hdfs_logs.txt  hdfs_logs1.txt
samples/: linux_logs.txt
src/triage/: __init__.py  cli.py  extract.py  funnel.py  playbook.py
