[project]
name = "triage"
version = "0.1.0"
description = "Filter noisy server logs with regex, extract structured events with a local Gemma model via Ollama, and emit strictly-validated JSON."
requires-python = ">=3.10"
dependencies = ["pydantic>=2", "requests"]

[project.scripts]
triage = "triage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]
